tests/baselines/reference/genericCallWithFunctionTypedArguments5.errors.txt
==== tests/cases/compiler/genericCallWithFunctionTypedArguments5.ts (4 errors) ====
    // Generic call with parameter of object type with member of function type of n args passed object whose associated member is call signature with n+1 args
    
    function foo<T, U>(arg: { cb: (t: T) => U }) {
        return arg.cb(null);
    }
    
    var arg = { cb: <T>(x: T) => '' };
    var r = foo(arg); // {}
    // more args not allowed
    var r2 = foo({ cb: <T>(x: T, y: T) => '' }); // error
             ~~~
!!! genericCallWithFunctionTypedArguments5.ts(10,10): error TS2082: Supplied parameters do not match any signature of call target:
!!! 	Types of property 'cb' of types '{ cb: <T>(x: T, y: T) => string; }' and '{ cb: (t: {}) => {}; }' are incompatible:
!!! 		Call signatures of types '<T>(x: T, y: T) => string' and '(t: {}) => {}' are incompatible:
!!! 			Call signature expects 1 or fewer parameters.
             ~~~
!!! genericCallWithFunctionTypedArguments5.ts(10,10): error TS2087: Could not select overload for 'call' expression.
    var r3 = foo({ cb: (x: string, y: number) => '' }); // error
             ~~~
!!! genericCallWithFunctionTypedArguments5.ts(11,10): error TS2082: Supplied parameters do not match any signature of call target:
!!! 	Types of property 'cb' of types '{ cb: (x: string, y: number) => string; }' and '{ cb: (t: {}) => {}; }' are incompatible:
!!! 		Call signatures of types '(x: string, y: number) => string' and '(t: {}) => {}' are incompatible:
!!! 			Call signature expects 1 or fewer parameters.
             ~~~
!!! genericCallWithFunctionTypedArguments5.ts(11,10): error TS2087: Could not select overload for 'call' expression.
    
    function foo2<T, U>(arg: { cb: (t: T, t2: T) => U }) {
        return arg.cb(null, null);
    }
    
    // fewer args ok
    var r4 = foo(arg); // {}
    var r5 = foo({ cb: <T>(x: T) => '' }); // {}
    var r6 = foo({ cb: (x: string) => '' }); // string
    var r7 = foo({ cb: () => '' }); // string
    